--- a/Course material/7. Moving to a Better Development Setup & Workflow with the Vue CLI/Project/vue-first-app/vue-first-app/package.json
+++ b/Course material/7. Moving to a Better Development Setup & Workflow with the Vue CLI/Project/vue-first-app/vue-first-app/package.json
@@ -19,5 +19,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "author": "Asparuh",
+  "license": "ISC"
 }
